; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_ips.c_ips_shift_controllers.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_ips.c_ips_shift_controllers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.Scsi_Host = type { i32 }

@ips_ha = common dso_local global %struct.TYPE_3__** null, align 8
@ips_sh = common dso_local global %struct.Scsi_Host** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @ips_shift_controllers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ips_shift_controllers(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca %struct.Scsi_Host*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %8 = load %struct.TYPE_3__**, %struct.TYPE_3__*** @ips_ha, align 8
  %9 = load i32, i32* %4, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %8, i64 %10
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  store %struct.TYPE_3__* %12, %struct.TYPE_3__** %5, align 8
  %13 = load %struct.Scsi_Host**, %struct.Scsi_Host*** @ips_sh, align 8
  %14 = load i32, i32* %4, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.Scsi_Host*, %struct.Scsi_Host** %13, i64 %15
  %17 = load %struct.Scsi_Host*, %struct.Scsi_Host** %16, align 8
  store %struct.Scsi_Host* %17, %struct.Scsi_Host** %6, align 8
  %18 = load i32, i32* %4, align 4
  store i32 %18, i32* %7, align 4
  br label %19

19:                                               ; preds = %51, %2
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %3, align 4
  %22 = icmp sgt i32 %20, %21
  br i1 %22, label %23, label %54

23:                                               ; preds = %19
  %24 = load %struct.TYPE_3__**, %struct.TYPE_3__*** @ips_ha, align 8
  %25 = load i32, i32* %7, align 4
  %26 = sub nsw i32 %25, 1
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %24, i64 %27
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %28, align 8
  %30 = load %struct.TYPE_3__**, %struct.TYPE_3__*** @ips_ha, align 8
  %31 = load i32, i32* %7, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %30, i64 %32
  store %struct.TYPE_3__* %29, %struct.TYPE_3__** %33, align 8
  %34 = load %struct.Scsi_Host**, %struct.Scsi_Host*** @ips_sh, align 8
  %35 = load i32, i32* %7, align 4
  %36 = sub nsw i32 %35, 1
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds %struct.Scsi_Host*, %struct.Scsi_Host** %34, i64 %37
  %39 = load %struct.Scsi_Host*, %struct.Scsi_Host** %38, align 8
  %40 = load %struct.Scsi_Host**, %struct.Scsi_Host*** @ips_sh, align 8
  %41 = load i32, i32* %7, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds %struct.Scsi_Host*, %struct.Scsi_Host** %40, i64 %42
  store %struct.Scsi_Host* %39, %struct.Scsi_Host** %43, align 8
  %44 = load i32, i32* %7, align 4
  %45 = load %struct.TYPE_3__**, %struct.TYPE_3__*** @ips_ha, align 8
  %46 = load i32, i32* %7, align 4
  %47 = sext i32 %46 to i64
  %48 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %45, i64 %47
  %49 = load %struct.TYPE_3__*, %struct.TYPE_3__** %48, align 8
  %50 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %49, i32 0, i32 0
  store i32 %44, i32* %50, align 4
  br label %51

51:                                               ; preds = %23
  %52 = load i32, i32* %7, align 4
  %53 = add nsw i32 %52, -1
  store i32 %53, i32* %7, align 4
  br label %19

54:                                               ; preds = %19
  %55 = load i32, i32* %3, align 4
  %56 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %57 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %56, i32 0, i32 0
  store i32 %55, i32* %57, align 4
  %58 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %59 = load %struct.TYPE_3__**, %struct.TYPE_3__*** @ips_ha, align 8
  %60 = load i32, i32* %3, align 4
  %61 = sext i32 %60 to i64
  %62 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %59, i64 %61
  store %struct.TYPE_3__* %58, %struct.TYPE_3__** %62, align 8
  %63 = load %struct.Scsi_Host*, %struct.Scsi_Host** %6, align 8
  %64 = load %struct.Scsi_Host**, %struct.Scsi_Host*** @ips_sh, align 8
  %65 = load i32, i32* %3, align 4
  %66 = sext i32 %65 to i64
  %67 = getelementptr inbounds %struct.Scsi_Host*, %struct.Scsi_Host** %64, i64 %66
  store %struct.Scsi_Host* %63, %struct.Scsi_Host** %67, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
